--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="head">
-        <a href="tfs.html">
+        <a href="index.html">
             <img class="logo" src=" images/tfs.jpg" alt="" />
           </a>
 
